@@ -1,7 +1,0 @@
-Name=BoardGameGeek
-Type=data-source
-ArgumentKeys=1
-Arguments=%1
-CollectionType=13
-FormatType=0
-UpdateArgs=%{title}
