@@ -35,6 +35,8 @@ public:
 private Q_SLOTS:
   void initTestCase();
   void testTitle();
+  void testTitleAPI();
+  void testKeywordAPI();
 };
 
 #endif
